# CodeStorageApp

./: README.md  app.py  pyproject.toml  requirements.txt
instance/: codes.db
static/: btn-1.js  btn-on-click-animation.js  button_tests.css  buttons.js  custom.css
templates/: 404.html  base.html  button_tests.html  main.html  test_space — копия.html  test_space.html  text_view.html
