[tool.poetry]
name = "codedumpwebsite"
version = "0.1.0"
description = ""
authors = ["KruTimurch <chickowarus@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "~3.0.3"
flask-sqlalchemy = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
